@@ -1,17 +1,7 @@
 package com.redis.om.spring.search.stream;
 
-import com.redis.om.spring.AbstractBaseDocumentTest;
-import com.redis.om.spring.fixtures.document.model.Company;
-import com.redis.om.spring.fixtures.document.model.CompanyMeta;
-import com.redis.om.spring.fixtures.document.model.MyDoc;
-import com.redis.om.spring.fixtures.document.repository.CompanyRepository;
-import com.redis.om.spring.fixtures.document.repository.MyDocRepository;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.*;
-import org.springframework.data.domain.ExampleMatcher.StringMatcher;
-import org.springframework.data.geo.Point;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -19,8 +9,19 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.*;
+import org.springframework.data.domain.ExampleMatcher.StringMatcher;
+import org.springframework.data.geo.Point;
+
+import com.redis.om.spring.AbstractBaseDocumentTest;
+import com.redis.om.spring.fixtures.document.model.Company;
+import com.redis.om.spring.fixtures.document.model.CompanyMeta;
+import com.redis.om.spring.fixtures.document.model.MyDoc;
+import com.redis.om.spring.fixtures.document.repository.CompanyRepository;
+import com.redis.om.spring.fixtures.document.repository.MyDocRepository;
 
 public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocumentTest {
   @Autowired
@@ -328,7 +329,8 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
 
     Example<Company> msExample = Example.of(msTemplate);
 
-    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors.toList());
+    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors
+        .toList());
     Iterable<Company> shouldBeOnlyMS = entityStream.of(Company.class).filter(msExample).collect(Collectors.toList());
 
     assertAll( //
@@ -353,7 +355,8 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
 
     Example<Company> msExample = Example.of(msTemplate);
 
-    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors.toList());
+    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors
+        .toList());
     Iterable<Company> shouldBeOnlyMS = entityStream.of(Company.class).filter(msExample).collect(Collectors.toList());
 
     assertAll( //
@@ -376,7 +379,8 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
     bothTemplate.setTags(Set.of("CommonTag"));
     Example<Company> bothExample = Example.of(bothTemplate);
 
-    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors.toList());
+    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors
+        .toList());
     Iterable<Company> shouldBeOnlyMS = entityStream.of(Company.class).filter(msExample).collect(Collectors.toList());
     Iterable<Company> shouldBeBoth = entityStream.of(Company.class).filter(bothExample).collect(Collectors.toList());
 
@@ -407,7 +411,8 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
     bothTemplate.setMetaList(Set.of(bothCm));
     Example<Company> bothExample = Example.of(bothTemplate);
 
-    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors.toList());
+    Iterable<Company> shouldBeOnlyRedis = entityStream.of(Company.class).filter(redisExample).collect(Collectors
+        .toList());
     Iterable<Company> shouldBeOnlyMS = entityStream.of(Company.class).filter(msExample).collect(Collectors.toList());
     Iterable<Company> shouldBeBoth = entityStream.of(Company.class).filter(bothExample).collect(Collectors.toList());
 
@@ -437,7 +442,8 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
     template.setTitle("llo");
     ExampleMatcher matcher = ExampleMatcher.matching().withStringMatcher(StringMatcher.CONTAINING);
 
-    List<MyDoc> result =  entityStream.of(MyDoc.class).filter(Example.of(template, matcher)).collect(Collectors.toList());
+    List<MyDoc> result = entityStream.of(MyDoc.class).filter(Example.of(template, matcher)).collect(Collectors
+        .toList());
 
     assertThat(result).hasSize(2);
   }
@@ -447,13 +453,15 @@ public class EntityStreamDocumentQueryByExampleTest extends AbstractBaseDocument
     MyDoc template = new MyDoc();
     template.setLocation(new Point(-122.066540, 37.377690));
 
-    Page<MyDoc> firstPage = entityStream.of(MyDoc.class).filter(Example.of(template)).getPage(PageRequest.of(0, 2, Sort.by("title")));
+    Page<MyDoc> firstPage = entityStream.of(MyDoc.class).filter(Example.of(template)).getPage(PageRequest.of(0, 2, Sort
+        .by("title")));
     assertThat(firstPage.getTotalElements()).isEqualTo(3);
     assertThat(firstPage.getContent().size()).isEqualTo(2);
-    assertThat(firstPage.getContent().stream().toList()).map(MyDoc::getTitle)
-        .containsExactly("bonjour le monde", "hello mundo");
+    assertThat(firstPage.getContent().stream().toList()).map(MyDoc::getTitle).containsExactly("bonjour le monde",
+        "hello mundo");
 
-    Page<MyDoc> secondPage = entityStream.of(MyDoc.class).filter(Example.of(template)).getPage(PageRequest.of(1, 2, Sort.by("title")));
+    Page<MyDoc> secondPage = entityStream.of(MyDoc.class).filter(Example.of(template)).getPage(PageRequest.of(1, 2, Sort
+        .by("title")));
 
     assertThat(secondPage.getTotalElements()).isEqualTo(3);
     assertThat(secondPage.getContent().size()).isEqualTo(1);
